# QtDemoClion

./: CMakeLists.txt  main.cpp
